--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.83"
+serde = { version = "1.0.201", features = ["derive"] }
+serde_json = "1.0.117"
