Add edition and description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "proot"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+description = "Wrapper around gh CLI"
 
 [dependencies]
 anyhow = "1.0.83"
