Add more metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "proot"
 version = "0.1.0"
-edition = "2024"
+authors = ["Lucas Vieira <lucas6eng@gmail.com>"]
+edition = "2021"
 description = "Wrapper around gh CLI"
+repository = "https://github.com/iamlucasvieira"
+license-file = "LICENSE"
+keywords = ["cli", "github"]
+categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
 anyhow = "1.0.83"
