--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,9 @@ categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
 anyhow = "1.0.83"
+clap = { version = "4.5.4", features = ["derive"] }
+colored = "2.1.0"
+env_logger = "0.11.3"
+log = "0.4.21"
 serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
